change hero image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="#home">
         <div class="hero-section container">
             <div class="frame">
-                <img src="my-img.png" alt="">
+                <img src="img/my-img.png" alt="">
 
             </div>
             <div class="text">
