--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="con">
                         <h5>2017 - 2021</h5>
                         <div class="para">
-                            <p>I completed my Bachelor's degree in Computer Science from XYZ University. During my
+                            <p>I completed my Bachelor's degree in Computer Science from Annapoorana Engineering College. During my
                                 studies,
                                 I gained knowledge in programming languages, algorithms, and software development
                                 methodologies.</p>
